# factor-stragedies

./: .gitignore  README.md  pyproject.toml
factor_stragedies/src/: simulator.ipynb  simulator_final.ipynb
