[tool.poetry]
name = "factor-stragedies"
version = "0.1.0"
description = ""
authors = ["Daniil <kononov.miromanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
cvxpy = "^1.6.0"
numba = "^0.60.0"
scikit-learn = "^1.6.0"
tqdm = "^4.67.1"
matplotlib = "^3.9.4"
ipykernel = "^6.29.5"
pyarrow = "^18.1.0"
fastparquet = "^2024.11.0"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
